[package]
name = "verver"
description = "Utilities for parsing, comparing, and manipulating version numbers and ranges"
repository = "https://github.com/zharinov/verver"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
winnow = "0.6.5"

[dev-dependencies]
rstest = "0.18.2"
insta = { version = "1.38.0", features = ["yaml"] }
serde = "1.0.197"
itertools = "0.12.1"

[profile.dev.package.insta]
opt-level = 3
